--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ footer-links:
   stackoverflow: users/4469613/ksami # your stackoverflow profile, e.g. "users/50476/bart-kiers"
 
 # Your disqus shortname, entering this will enable commenting on posts
-disqus: 
+disqus: ksami
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics: 
