--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,13 @@ url: http://ksami.github.io
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: ""
 
+
+# Posts per page
+paginate: 5
+
+# Path to pages
+paginate_path: "/page=:num"
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
