--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ avatar: https://avatars1.githubusercontent.com/u/2187904?v=3&s=96
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: ksami.ihide@gmail.com
+  email: 
   facebook: 
   flickr: 
   github: ksami
@@ -52,7 +52,7 @@ baseurl: ""
 paginate: 5
 
 # Path to pages
-paginate_path: "/page=:num"
+#paginate_path: "/page:num"
 
 #
 # !! You don't need to change any of the configuration flags below !!
