--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: ksami
 
 # Short bio or description (displayed in the header)
-description: 
+description: The Amazing
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/2187904?v=3&s=96
@@ -20,12 +20,12 @@ avatar: https://avatars1.githubusercontent.com/u/2187904?v=3&s=96
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: 
+  email: ksami.ihide@gmail.com
   facebook: 
   flickr: 
   github: ksami
   instagram: 
-  linkedin: 
+  linkedin: https://www.linkedin.com/in/angkenneth
   pinterest: 
   rss: rss # just type anything here for a working RSS icon, make sure you set the "url" below!
   twitter:
