--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ footer-links:
   flickr: 
   github: ksami
   instagram: 
-  linkedin: https://www.linkedin.com/in/angkenneth
+  linkedin: angkenneth
   pinterest: 
   rss: rss # just type anything here for a working RSS icon, make sure you set the "url" below!
   twitter:
