--- a/_config.yml
+++ b/_config.yml
@@ -58,8 +58,7 @@ paginate_path: ":num"
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: redcarpet
-highlighter: pygments
+highlighter: rouge
 #permalink: /:title/
 
 # The release of Jekyll Now that you're using
