--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,8 @@ paginate: 5
 # Path to pages
 paginate_path: ":num"
 
+timezone: Singapore
+
 #
 # !! You don't need to change any of the configuration flags below !!
 #
