--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: ksami
 
 # Short bio or description (displayed in the header)
-description:
+description: of CEG
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/2187904?v=3&s=96
